Hierarchical Tree Machine

--- a/HierarchicalTreeMachine.Tests/HierarchicalTreeMachine.Tests.csproj
+++ b/HierarchicalTreeMachine.Tests/HierarchicalTreeMachine.Tests.csproj
@@ -19,7 +19,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\HierarchicalNodeMachine\HierarchicalNodeMachine.csproj" />
+      <ProjectReference Include="..\HierarchicalTreeMachine\HierarchicalTreeMachine.csproj" />
     </ItemGroup>
 
     <ItemGroup>
