--- a/HierarchicalTreeMachine/HierarchicalTreeMachine.csproj
+++ b/HierarchicalTreeMachine/HierarchicalTreeMachine.csproj
@@ -8,24 +8,24 @@
 
         <!--Assembly attributes-->
         <Version>1.0.0</Version>
-        <Description>The base classes for advanced node hierarchy implementation</Description>
+        <Description>The base classes for hierarchical tree implementation</Description>
         <Authors>Denis535</Authors>
         <Company>Denis535</Company>
         <Product>$(AssemblyName)</Product>
         <Copyright></Copyright>
-        <RepositoryUrl>https://github.com/Denis535/HierarchicalNodeMachine</RepositoryUrl>
+        <RepositoryUrl>https://github.com/Denis535/HierarchicalTreeMachine</RepositoryUrl>
 
         <!--Nuget package attributes-->
         <IsPackable>true</IsPackable>
-        <Title>Hierarchical Node Machine</Title>
+        <Title>Hierarchical Tree Machine</Title>
         <PackageId>$(AssemblyName)</PackageId>
         <PackageVersion>$(Version)</PackageVersion>
         <PackageReadmeFile>Readme.md</PackageReadmeFile>
         <PackageIcon>Icon.png</PackageIcon>
         <PackageIconUrl></PackageIconUrl>
         <PackageDescription>$(Description)</PackageDescription>
-        <PackageProjectUrl>https://github.com/Denis535/HierarchicalNodeMachine</PackageProjectUrl>
-        <PackageTags>node; hierarchy; structure</PackageTags>
+        <PackageProjectUrl>https://github.com/Denis535/HierarchicalTreeMachine</PackageProjectUrl>
+        <PackageTags>node; hierarchy; tree; structure</PackageTags>
 
         <PackageLicenseFile>LICENSE</PackageLicenseFile>
         <PackageLicenseUrl></PackageLicenseUrl>
