--- a/HierarchicalTreeMachine/HierarchicalTreeMachine.csproj
+++ b/HierarchicalTreeMachine/HierarchicalTreeMachine.csproj
@@ -7,8 +7,8 @@
         <RootNamespace />
 
         <!--Assembly attributes-->
-        <Version>1.0.0</Version>
-        <Description>The base classes for hierarchical tree implementation</Description>
+        <Version>1.0.1</Version>
+        <Description>The library for implementation of hierarchical tree</Description>
         <Authors>Denis535</Authors>
         <Company>Denis535</Company>
         <Product>$(AssemblyName)</Product>
