--- a/HierarchicalTreeMachine/HierarchicalTreeMachine.csproj
+++ b/HierarchicalTreeMachine/HierarchicalTreeMachine.csproj
@@ -7,8 +7,8 @@
         <RootNamespace />
 
         <!--Assembly attributes-->
-        <Version>1.0.11</Version>
-        <Description>The library that helps you implement the hierarchical tree structure.</Description>
+        <Version>1.0.12</Version>
+        <Description>The library that helps you implement a tree structure.</Description>
         <Authors>Denis535</Authors>
         <Company>Denis535</Company>
         <Product>$(AssemblyName)</Product>
