--- a/TreeMachine.Pro/TreeMachine.Pro.csproj
+++ b/TreeMachine.Pro/TreeMachine.Pro.csproj
@@ -8,7 +8,7 @@
 
         <!--Assembly attributes-->
         <Version>1.1.5</Version>
-        <Description>The library that helps you implement a tree structure.</Description>
+        <Description>The library that allows you to easily implement a tree structure.</Description>
         <Authors>Denis535</Authors>
         <Company>Denis535</Company>
         <Product>$(AssemblyName)</Product>
