--- a/TreeMachine.Pro (Cpp)/TreeMachine.Pro.Tests/TreeMachine.Pro.Tests.vcxproj
+++ b/TreeMachine.Pro (Cpp)/TreeMachine.Pro.Tests/TreeMachine.Pro.Tests.vcxproj
@@ -61,9 +61,9 @@
       <BasicRuntimeChecks>EnableFastChecks</BasicRuntimeChecks>
       <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
       <WarningLevel>Level3</WarningLevel>
-      <AdditionalIncludeDirectories>..\TreeMachine.Pro;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp17</LanguageStandard>
       <LanguageStandard_C>stdc17</LanguageStandard_C>
+      <PreprocessToFile>false</PreprocessToFile>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
@@ -104,10 +104,9 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="pch.h" />
-    <ClInclude Include="TreeMachine\pch.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="TreeMachine\Tests_00.cpp" />
+    <ClCompile Include="Private\Tests_00.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
