--- a/TreeMachine.Pro (Cpp)/TreeMachine.Pro.Tests/TreeMachine.Pro.Tests.vcxproj.filters
+++ b/TreeMachine.Pro (Cpp)/TreeMachine.Pro.Tests/TreeMachine.Pro.Tests.vcxproj.filters
@@ -1,23 +1,27 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClCompile Include="TreeMachine\Tests_00.cpp">
-      <Filter>TreeMachine</Filter>
+    <ClCompile Include="Private\Tests_00.cpp">
+      <Filter>Private</Filter>
     </ClCompile>
-    <ClCompile Include="pch.cpp" />
+    <ClCompile Include="Private\pch.cpp">
+      <Filter>Private</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Filter Include="TreeMachine">
+    <Filter Include="Private">
       <UniqueIdentifier>{1c60edcd-a0bd-4ed1-a520-936ca6156784}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Public">
+      <UniqueIdentifier>{6b517fc7-0fbf-4df2-ada9-b74d1beaa7b9}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="pch.h" />
-    <ClInclude Include="TreeMachine\pch.h">
-      <Filter>TreeMachine</Filter>
+    <ClInclude Include="Private\pch.h">
+      <Filter>Private</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
