--- a/TreeMachine.Pro (Cpp)/TreeMachine.Pro.Tests/TreeMachine.Pro.Tests.vcxproj.filters
+++ b/TreeMachine.Pro (Cpp)/TreeMachine.Pro.Tests/TreeMachine.Pro.Tests.vcxproj.filters
@@ -4,7 +4,9 @@
     <ClCompile Include="Private\Tests_00.cpp">
       <Filter>Private</Filter>
     </ClCompile>
-    <ClCompile Include="pch.cpp" />
+    <ClCompile Include="Private\pch.cpp">
+      <Filter>Private</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -18,6 +20,8 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="pch.h" />
+    <ClInclude Include="Private\pch.h">
+      <Filter>Private</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
