--- a/TreeMachine.Pro (Cpp)/TreeMachine.Pro.Tests/TreeMachine.Pro.Tests.vcxproj
+++ b/TreeMachine.Pro (Cpp)/TreeMachine.Pro.Tests/TreeMachine.Pro.Tests.vcxproj
@@ -34,7 +34,7 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <EnableMicrosoftCodeAnalysis>false</EnableMicrosoftCodeAnalysis>
-    <EnableClangTidyCodeAnalysis>true</EnableClangTidyCodeAnalysis>
+    <EnableClangTidyCodeAnalysis>false</EnableClangTidyCodeAnalysis>
   </PropertyGroup>
   <ItemDefinitionGroup />
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
