--- a/TreeMachine.Pro (Cpp)/TreeMachine.Pro/meson.build
+++ b/TreeMachine.Pro (Cpp)/TreeMachine.Pro/meson.build
@@ -1,6 +1,6 @@
-project('TreeMachine.Pro', ['cpp'])
+project('TreeMachine.Pro', ['cpp'], version : '1.0.0')
 
-static_library(
+tree_machine_pro = static_library(
   'TreeMachine.Pro',
   files(
     'Private/TreeMachine/TreeBase.cpp',
@@ -10,6 +10,8 @@ static_library(
   include_directories: include_directories('Public'),
   implicit_include_directories: false,
   cpp_pch: 'pch/pch.h',
+  dependencies: [
+  ],
   install: true,
   name_prefix: ''
 )
@@ -19,3 +21,9 @@ install_subdir(
   install_dir: 'include',
   strip_directory: true
 )
+
+# tree_machine_pro_dep = declare_dependency(
+#  include_directories: include_directories('Public'),
+#  link_with: tree_machine_pro
+# )
+# meson.override_dependency('TreeMachine.Pro', tree_machine_pro_dep)
