--- a/TreeMachine.Pro (Cpp)/.bazelrc
+++ b/TreeMachine.Pro (Cpp)/.bazelrc
@@ -2,7 +2,7 @@
 build --host_platform=//platforms:windows_x64
 
 # --- Common settings ---
-build --platforms=//platforms:windows_x64
+build --toolchain_resolution_debug=true
 
 # --- Standard and MSVC ABI compatibility ---
 build --copt=/std:c++17
@@ -10,15 +10,17 @@ build --copt=/Zc:preprocessor
 build --copt=/Zc:__cplusplus
 
 # --- Debug configuration ---
-build:debug --compilation_mode=dbg
-build:debug --strip=never
-build:debug --copt=/Od
-build:debug --linkopt=/DEBUG
-build:debug --define=DEBUG=1
+build:windows_x64_debug --platforms=//platforms:windows_x64
+build:windows_x64_debug --compilation_mode=dbg
+build:windows_x64_debug --strip=never
+build:windows_x64_debug --copt=/Od
+build:windows_x64_debug --linkopt=/DEBUG
+build:windows_x64_debug --define=DEBUG=1
 
 # --- Release configuration ---
-build:release --compilation_mode=opt
-build:release --strip=always
-build:release --copt=/O2
-build:release --linkopt=/INCREMENTAL:NO
-build:release --define=NDEBUG=1
+build:windows_x64_release --platforms=//platforms:windows_x64
+build:windows_x64_release --compilation_mode=opt
+build:windows_x64_release --strip=always
+build:windows_x64_release --copt=/O2
+build:windows_x64_release --linkopt=/INCREMENTAL:NO
+build:windows_x64_release --define=NDEBUG=1
