--- a/TreeMachine.Pro(Cpp)/TreeMachine.Pro.Tests/BUILD.bazel
+++ b/TreeMachine.Pro(Cpp)/TreeMachine.Pro.Tests/BUILD.bazel
@@ -1,19 +1,15 @@
-cc_library(
-    name = "tree_machine_pro",
+cc_test(
+    name = "tree_machine_pro_tests",
     srcs = glob([
-        "pch/pch.cpp",
         "Private/*.cpp",
         "Private/**/*.cpp",
     ], allow_empty = True),
     includes = [
         ".",
     ],
-    hdrs = glob([
-        "Public/*.h",
-        "Public/**/*.h",
-    ], allow_empty = True),
-    strip_include_prefix = "Public",
     deps = [
+        "@googletest//:gtest_main",
+        "//TreeMachine.Pro:tree_machine_pro",
     ],
     visibility = ["//visibility:public"],
 )
