--- a/TreeMachine.Pro(Cpp)/.vscode/settings.json
+++ b/TreeMachine.Pro(Cpp)/.vscode/settings.json
@@ -1,6 +1,4 @@
 {
-    "clangd.checkUpdates": true,
-    "bazel.lsp.command": "bazel-lsp",
     "files.exclude": {
         ".vscode/**": true,
         "bazel-*/**": true,
@@ -11,5 +9,10 @@
         "**/.clang-tidy": true,
         "**/*.lock": true,
         "**/*.bat": true,
-    }
+    },
+    "clangd.checkUpdates": true,
+    "bazel.lsp.command": "bazel-lsp",
+    "files.associations": {
+        "variant": "cpp"
+    },
 }
