--- a/TreeMachine.Pro(Cpp)/.vscode/settings.json
+++ b/TreeMachine.Pro(Cpp)/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
+    "bazel.lsp.command": "bazel-lsp",
     "files.exclude": {
         ".vscode/**": true,
         "bazel-*/**": true,
@@ -8,5 +9,26 @@
         "**/.clang-format": true,
         "**/.clang-tidy": true,
     },
-    "bazel.lsp.command": "bazel-lsp"
+    "editor.tokenColorCustomizations": {
+        "textMateRules": [
+            {
+                "scope": "googletest.failed",
+                "settings": {
+                    "foreground": "#f00"
+                }
+            },
+            {
+                "scope": "googletest.passed",
+                "settings": {
+                    "foreground": "#0f0"
+                }
+            },
+            {
+                "scope": "googletest.run",
+                "settings": {
+                    "foreground": "#0f0"
+                }
+            }
+        ]
+    }
 }
