--- a/TreeMachine.Pro_Cpp/.bazelrc
+++ b/TreeMachine.Pro_Cpp/.bazelrc
@@ -1,28 +1,35 @@
-# --- Host ---
+# Host
 build --host_platform=//platforms:windows_x64
 
-# --- Language ---
-build --copt=/std:c++17       # Use C++17 standard
-build --copt=/Zc:preprocessor # Enable standard-compliant preprocessor
-build --copt=/Zc:__cplusplus  # Set correct __cplusplus value based on the standard
-build --copt=/permissive-     # Enforce strict ISO C++ compliance
-build --copt=/EHsc            # Use standard C++ exception handling (no SEH)
-build --copt=/sdl             # Enable additional security and runtime checks (Security Development Lifecycle)
-build --copt=/W4              # Enable warning level 3
-build --copt=/WX
+# build
+build --copt=/std:c++17        # Use the C++17 standard
+build --copt=/Zc:__cplusplus   # Ensure __cplusplus macro matches the standard version
+build --copt=/Zc:preprocessor  # Use the standard-conforming preprocessor
+build --copt=/permissive-      # Enforce strict ISO C++ compliance (disable Microsoft extensions)
+build --copt=/EHsc             # Use standard C++ exception handling (no structured exceptions)
+build --copt=/sdl              # Enable additional security and runtime checks (Security Development Lifecycle)
+build --copt=/W4               # Enable warning level 4
+build --copt=/WX               # Treat warnings as errors
 
-# --- Debug ---
+# build/debug
 build:windows_x64_debug --platforms=//platforms:windows_x64
 build:windows_x64_debug --compilation_mode=dbg
 build:windows_x64_debug --strip=never
 build:windows_x64_debug --copt=/Od
 build:windows_x64_debug --linkopt=/DEBUG
+# build:windows_x64_debug --copt=/fsanitize=address
+# build:windows_x64_debug --linkopt=/INFERASANLIBS
 build:windows_x64_debug --define=DEBUG=1
 
-# --- Release ---
+# build/release
 build:windows_x64_release --platforms=//platforms:windows_x64
 build:windows_x64_release --compilation_mode=opt
 build:windows_x64_release --strip=always
 build:windows_x64_release --copt=/O2
 build:windows_x64_release --linkopt=/INCREMENTAL:NO
 build:windows_x64_release --define=NDEBUG=1
+
+# test
+test --config=windows_x64_debug
+test --test_output=all
+test --verbose_failures
